; ModuleID = '/home/carl/AnghaBench/linux/crypto/extr_zstd.c_zstd_compress.c'
source_filename = "/home/carl/AnghaBench/linux/crypto/extr_zstd.c_zstd_compress.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.crypto_tfm = type { i32 }
%struct.zstd_ctx = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.crypto_tfm*, i32*, i32, i32*, i32*)* @zstd_compress to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @zstd_compress(%struct.crypto_tfm* %0, i32* %1, i32 %2, i32* %3, i32* %4) #0 {
  %6 = alloca %struct.crypto_tfm*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca %struct.zstd_ctx*, align 8
  store %struct.crypto_tfm* %0, %struct.crypto_tfm** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32* %3, i32** %9, align 8
  store i32* %4, i32** %10, align 8
  %12 = load %struct.crypto_tfm*, %struct.crypto_tfm** %6, align 8
  %13 = call %struct.zstd_ctx* @crypto_tfm_ctx(%struct.crypto_tfm* %12)
  store %struct.zstd_ctx* %13, %struct.zstd_ctx** %11, align 8
  %14 = load i32*, i32** %7, align 8
  %15 = load i32, i32* %8, align 4
  %16 = load i32*, i32** %9, align 8
  %17 = load i32*, i32** %10, align 8
  %18 = load %struct.zstd_ctx*, %struct.zstd_ctx** %11, align 8
  %19 = call i32 @__zstd_compress(i32* %14, i32 %15, i32* %16, i32* %17, %struct.zstd_ctx* %18)
  ret i32 %19
}

declare dso_local %struct.zstd_ctx* @crypto_tfm_ctx(%struct.crypto_tfm*) #1

declare dso_local i32 @__zstd_compress(i32*, i32, i32*, i32*, %struct.zstd_ctx*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
